--- a/styles/style.scss
+++ b/styles/style.scss
@@ -132,7 +132,7 @@ table {
 ::after {
   font-family: "Castoro", serif;
   box-sizing: border-box;
-  outline: 1px solid #000;
+  // outline: 1px solid #000;
 }
 img {
   max-width: 100%;
